Added Profile page in front page

--- a/HTML5 Front-end/profile.html
+++ b/HTML5 Front-end/profile.html
@@ -7,6 +7,7 @@
 	<title>HowYouCanHelp</title>
 	<link href = 'bootstrap/css/bootstrap.min.css' rel = 'stylesheet' type = 'text/css'>
 	<link href = 'css/template.css' rel = 'stylesheet' type = 'text/css'>
+	<link href = 'css/profile.css' rel = 'stylesheet' type = 'text/css'>
 	<!-- Google Fonts -->
 	<!--<link href = 'http://fonts.googleapis.com/css?family=Montserrat' rel = 'stylesheet' type = 'text/css'>-->
 	<script src = 'js/jquery.min.js'></script>
@@ -14,10 +15,42 @@
 </head>
 <body>
 	<div id="header" class="">
+		<img src="" id="search-icon" class="pull-left"/>
 		<h1 id="logo">HowYouCanHelp</h1>
 	</div>
 	<div id="profile" class="body">
-		
+		<center>
+			<img src="" id="profile-photo"/>
+			<h1 id="profile-name">Juan Dela Cruz</h1>
+			<span id="profile-karma">3,500 Good Karma</span>
+		</center>
+		<div id="recent-act-container">
+			<div id="recent-act-header" class="">
+				Most Recent Activities
+			</div>
+			<div id="recent-act-list" class="">
+				<div class="recent-act-item">
+					Volunteered in Gawad Kalinga's Walang Iwanan.
+				</div>
+				<hr/>
+				<div class="recent-act-item">
+					Volunteered in Gawad Kalinga's Walang Iwanan.
+				</div>
+				<hr/>
+				<div class="recent-act-item">
+					Volunteered in Gawad Kalinga's Walang Iwanan.
+				</div>
+				<hr/>
+				<div class="recent-act-item">
+					Volunteered in Gawad Kalinga's Walang Iwanan.
+				</div>
+				<hr/>
+				<div class="recent-act-item">
+					Volunteered in Gawad Kalinga's Walang Iwanan.
+				</div>
+				<hr/>
+			</div>
+		</div>
 	</div>
 	<div id="footer" class="">
 		<div class="footer-tab col-xs-4">
