--- a/HTML5 Front-end/template.html
+++ b/HTML5 Front-end/template.html
@@ -14,6 +14,7 @@
 </head>
 <body>
 	<div id="header" class="">
+		<img src="" id="search-icon" class="pull-left"/>
 		<h1 id="logo">HowYouCanHelp</h1>
 	</div>
 	<div id="body" class="">
