--- a/Front-end/map.html
+++ b/Front-end/map.html
@@ -35,25 +35,24 @@
 					
 					<div class="report-row row">
 						<div class="col-xs-4">
-							<center><img src="imgs/flood.png" class="img-responsive"><br> Flood</center>
-		
+							<center><img src="imgs/flood.png" class="img-responsive report-type-button"><br> Flood</center>
 						</div>
 						<div class="col-xs-4">
-							<center><img src="imgs/help.png" class="img-responsive"><br> Help Needed</center>
+							<center><img src="imgs/help.png" class="img-responsive report-type-button"><br> Help Needed</center>
 						</div>
 						<div class="col-xs-4">
-							<center><img src="imgs/evacuation.png" class="img-responsive"><br> Evacuation Area</center>
+							<center><img src="imgs/evacuation.png" class="img-responsive report-type-button"><br> Evacuation Area</center>
 						</div>
 					</div>
 					<div class="report-row row">
 						<div class="col-xs-4">
-							<center><img src="imgs/dropoff.png" class="img-responsive"><br> Donation Drop-off</center>
+							<center><img src="imgs/dropoff.png" class="img-responsive report-type-button"><br> Donation Drop-off</center>
 						</div>
 						<div class="col-xs-4">
-							<center><img src="imgs/fund.png" class="img-responsive"><br> Fund Raising</center>
+							<center><img src="imgs/fund.png" class="img-responsive report-type-button"><br> Fund Raising</center>
 						</div>
 						<div class="col-xs-4">
-							<center><img src="imgs/volunteer.png" class="img-responsive">Volunteer Station</center>
+							<center><img src="imgs/volunteer.png" class="img-responsive report-type-button">Volunteer Station</center>
 						</div>
 					</div>
 				  </div>
